--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
   "bugs": {
     "url": "https://github.com/IlBenza/servernode/issues"
   },
-  "homepage": "https://github.com/IlBenza/servernode#readme"
+  "homepage": "https://github.com/IlBenza/servernode#readme",
+  "dependencies": {
+    "express": "^4.16.4",
+    "mongodb": "^3.2.4",
+    "nodemon": "^1.19.0"
+  }
 }
